使用 Colab 创建而成

--- a/assignments/assn2/assn2.ipynb
+++ b/assignments/assn2/assn2.ipynb
@@ -2692,11 +2692,11 @@
         "E_yhat\n"
       ],
       "metadata": {
-        "id": "_D6ORYCFAHnM",
-        "outputId": "58998e3b-6a7e-42b4-e70e-87aaffcd8eb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_D6ORYCFAHnM",
+        "outputId": "58998e3b-6a7e-42b4-e70e-87aaffcd8eb3"
       },
       "id": "_D6ORYCFAHnM",
       "execution_count": 227,
@@ -2801,7 +2801,33 @@
         "id": "24cfde70"
       },
       "source": [
-        "[Your answer here in markdown]\n"
+        "[Your answer here in markdown]\n",
+        "**3.4 Do the bias and variance make sense?**\n",
+        "\n",
+        "**(a)** Yes. As the maximum tree depth increases, the regression tree becomes more flexible (higher model complexity). This reduces approximation error, so the squared bias decreases with depth. At the same time, deeper trees fit each particular training set more closely and become more sensitive to the sampled training data, so the variance of $\\hat f(x)$ across different train/test splits increases. This is the standard bias–variance tradeoff.\n",
+        "\n",
+        "This is also consistent with the test MSE curve. For each fixed $x$,\n",
+        "$$\n",
+        "y = f(x) + \\varepsilon,\\qquad \\mathbb{E}[\\varepsilon]=0,\\qquad \\mathrm{Var}(\\varepsilon)=\\sigma^2,\n",
+        "$$\n",
+        "and the prediction error decomposes as\n",
+        "$$\n",
+        "\\mathbb{E}\\!\\left[\\bigl(Y-\\widehat f(X)\\bigr)^2\\right]\n",
+        "=\n",
+        "\\left(\\mathbb{E}\\!\\left[\\widehat f(X)\\right]-f(X)\\right)^2\n",
+        "+\n",
+        "\\mathrm{Var}\\!\\left(\\widehat f(X)\\right)\n",
+        "+\n",
+        "\\sigma^2.\n",
+        "$$\n",
+        "\n",
+        "So as depth increases, squared bias decreases and variance increases, and the MSE is minimized at an intermediate depth where the tradeoff is best—matching the observed U-shaped MSE trend.\n",
+        "\n",
+        "**(b)** The difference between the MSE and the sum of squared bias and variance should be approximately the irreducible noise variance:\n",
+        "$$\n",
+        "\\text{MSE} - \\left(\\text{squared bias}+\\text{variance}\\right) \\approx \\sigma^2.\n",
+        "$$\n",
+        "Here $\\varepsilon\\sim N(0,1)$, so $\\sigma^2\\approx 1$. Therefore the difference is approximately **1**.\n"
       ]
     }
   ],
